--- a/app/views/landing/index.html.slim
+++ b/app/views/landing/index.html.slim
@@ -1,2 +1,9 @@
-h1
-  | Hola
+doctype html
+html
+  head
+    meta name="viewport" content="width=device-width, initial-scale=1"
+  body
+    .container
+      = image_tag('phone.png', class: 'phone')
+      .vertical-separator
+      = image_tag('tcg_logo.png', class: 'logo')
