--- a/app/views/landing/index.html.slim
+++ b/app/views/landing/index.html.slim
@@ -3,7 +3,27 @@ html
   head
     meta name="viewport" content="width=device-width, initial-scale=1"
   body
-    .container
+    article.container
       = image_tag('phone.png', class: 'phone')
       .vertical-separator
       = image_tag('tcg_logo.png', class: 'logo')
+    .triangle-separator
+    article.features-section
+      .feature
+        = image_tag('ic_list.png', class: 'feature-image')
+        b
+          | Keep track of your money
+        p.feature-text
+          | See all your debts and all your friends debts towards you.
+      .feature
+        = image_tag('ic_reminder.png', class: 'feature-image')
+        b
+          | Generate reminders
+        p.feature-text
+          | Get reminded of who owes you money or who you owe money to.
+      .feature
+        = image_tag('ic_safe.png', class: 'feature-image')
+        b
+          | No internet needed
+        p.feature-text
+          | All your debts are kept safe in your phone.
