--- a/app/assets/stylesheets/variables/colors.scss
+++ b/app/assets/stylesheets/variables/colors.scss
@@ -1,5 +1,5 @@
-$white: #ffffff;
+$white: #fcfcfc;
 $orange: #f4a641;
-$light-orange: #f4b841;
+$light-orange: #F6C75F;
 $light-gray: #EEEEEE;
 $medium-gray: #777777;
