--- a/app/views/landing/index.html.slim
+++ b/app/views/landing/index.html.slim
@@ -28,3 +28,9 @@ html
           | No internet needed
         p.feature-text
           | All your debts are kept safe in your phone.
+    footer
+      p
+        | Get info on new updates
+      input
+      button type="submit"
+        | Subscribe
