--- a/app/views/rent_mailer/new_rent_mail.html.slim
+++ b/app/views/rent_mailer/new_rent_mail.html.slim
@@ -4,4 +4,4 @@ html
     meta name="viewport" content="width=device-width, initial-scale=1"
     meta content="text-html; charset=UTF-8" http-equiv="Content-Type"
   body
-    | Hola :D
+    = t(:hello)
